--- a/CarnivoresRemake/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CarnivoresRemake/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -219,7 +219,7 @@ AnimationCurveGroupingDelimiters="._/|\\"
 
 [DetailCustomWidgetExpansion]
 BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup
+SkeletalMeshComponent=BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.WeaponRowName,K2Node_VariableGet.DefaultValueCategory.WeaponRowName
 EdGraph=BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.WeaponRowName,K2Node_VariableGet.DefaultValueCategory.WeaponRowName
 PropertyWrapper=BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.WeaponRowName,K2Node_VariableGet.DefaultValueCategory.WeaponRowName
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
@@ -236,7 +236,7 @@ K2Node_FunctionResult=BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdP
 SceneComponent=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Weapon_System/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 AssetPropertyPicker.ThumbnailSizeGrid=2
 AssetPropertyPicker.ThumbnailSizeList=2
@@ -317,16 +317,19 @@ LastLevel=/Game/ThirdPerson/Lvl_ThirdPerson
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 OpenAssetsAtExit=/Game/Weapon_System/Data_Structs/Weapon_Data.Weapon_Data
 OpenAssetsAtExit=/Game/Weapon_System/Data_Table/Weapon_Data_Table.Weapon_Data_Table
@@ -335,19 +338,26 @@ OpenAssetsAtExit=/Game/Weapon_System/Enums/Weapon_Type.Weapon_Type
 OpenAssetsAtExit=/Game/Characters/Mannequins/Anims/Unarmed/ABP_Unarmed.ABP_Unarmed
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Weapon_System/Blueprints/BP_BaseWeapon.BP_BaseWeapon
+OpenAssetsAtExit=/Game/Weapon_System/Blueprints/BP_Pump_Shotgun.BP_Pump_Shotgun
+OpenAssetsAtExit=/Game/Weapon_System/Blueprints/BP_Rifle.BP_Rifle
+OpenAssetsAtExit=/Game/Weapon_System/Blueprints/BP_Sniper_Rifle.BP_Sniper_Rifle
+OpenAssetsAtExit=/Game/Characters/Mannequins/Meshes/SK_Mannequin.SK_Mannequin
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/Weapon_System/Blueprints/BP_Pistol
-MRUItem2=/Game/Weapon_System/Data_Table/Weapon_Data_Table
-MRUItem3=/Game/Weapon_System/Blueprints/BP_BaseWeapon
-MRUItem4=/Game/Characters/Mannequins/Anims/Unarmed/ABP_Unarmed
-MRUItem5=/Game/Weapon_System/Enums/Weapon_Type
-MRUItem6=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem7=/Game/AnimStarterPack/UE5_AnimIdle_Pistol
-MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Manny_Simple
-MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem10=/Game/Weapon_System/Data_Structs/Weapon_Data
+MRUItem0=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem1=/Game/Characters/Mannequins/Meshes/SKM_Manny_Simple
+MRUItem2=/Game/Weapon_System/Blueprints/BP_Sniper_Rifle
+MRUItem3=/Game/Weapon_System/Blueprints/BP_Rifle
+MRUItem4=/Game/Weapon_System/Blueprints/BP_Pump_Shotgun
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/Weapon_System/Blueprints/BP_Pistol
+MRUItem7=/Game/Weapon_System/Data_Table/Weapon_Data_Table
+MRUItem8=/Game/Weapon_System/Blueprints/BP_BaseWeapon
+MRUItem9=/Game/Characters/Mannequins/Anims/Unarmed/ABP_Unarmed
+MRUItem10=/Game/Weapon_System/Enums/Weapon_Type
+MRUItem11=/Game/AnimStarterPack/UE5_AnimIdle_Pistol
+MRUItem12=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem13=/Game/Weapon_System/Data_Structs/Weapon_Data
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -674,6 +684,54 @@ BP_BaseWeapon_C.TransformCommon=True
 BP_BaseWeapon_C.Networking=True
 BP_Pistol_C.TransformCommon=True
 BP_Pistol_C.Networking=True
+SkeletalMeshComponent.Optimization=True
+BP_Shotgun_C.Default=True
+BP_Shotgun_C.Tick=True
+BP_Shotgun_C.Replication=True
+BP_Shotgun_C.Rendering=True
+BP_Shotgun_C.Actor=True
+BP_Shotgun_C.HLOD=True
+BP_Shotgun_C.Collision=True
+BP_Shotgun_C.Input=True
+BP_Shotgun_C.Physics=True
+BP_Shotgun_C.Events=True
+BP_Pump_Shotgun_C.Events=True
+BP_Pump_Shotgun_C.Physics=True
+BP_Pump_Shotgun_C.Input=True
+BP_Pump_Shotgun_C.Collision=True
+BP_Pump_Shotgun_C.HLOD=True
+BP_Pump_Shotgun_C.Actor=True
+BP_Pump_Shotgun_C.Rendering=True
+BP_Pump_Shotgun_C.Replication=True
+BP_Pump_Shotgun_C.Tick=True
+BP_Pump_Shotgun_C.Default=True
+BP_Pump_Shotgun_C.TransformCommon=True
+BP_Pump_Shotgun_C.Networking=True
+K2Node_CallParentFunction.Graph=True
+BP_Rifle_C.Default=True
+BP_Rifle_C.Tick=True
+BP_Rifle_C.Replication=True
+BP_Rifle_C.Rendering=True
+BP_Rifle_C.Actor=True
+BP_Rifle_C.HLOD=True
+BP_Rifle_C.Collision=True
+BP_Rifle_C.Input=True
+BP_Rifle_C.Physics=True
+BP_Rifle_C.Events=True
+BP_Sniper_Rifle_C.Default=True
+BP_Sniper_Rifle_C.Tick=True
+BP_Sniper_Rifle_C.Replication=True
+BP_Sniper_Rifle_C.Rendering=True
+BP_Sniper_Rifle_C.Actor=True
+BP_Sniper_Rifle_C.HLOD=True
+BP_Sniper_Rifle_C.Collision=True
+BP_Sniper_Rifle_C.Input=True
+BP_Sniper_Rifle_C.Physics=True
+BP_Sniper_Rifle_C.Events=True
+BP_Rifle_C.TransformCommon=True
+BP_Rifle_C.Networking=True
+BP_Sniper_Rifle_C.TransformCommon=True
+BP_Sniper_Rifle_C.Networking=True
 
 [DetailPropertyExpansion]
 BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.COMNudge\" \"Object.Character.Mesh.Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Gravity.GravityDirection\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CharacterMovement.Object.PlanarMovement.PlaneConstraintNormal\" \"Object.Character.CharacterMovement.Object.PlanarMovement.PlaneConstraintOrigin\" \"Object.Character.CharacterMovement.Object.NavMovement.NavMovementProperties\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.COMNudge\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.InertiaTensorScale\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
@@ -2189,6 +2247,12 @@ ChangeVariableType_Warning=False
 DeleteConfirmationVariable_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Weapon_System/Blueprints/BP_Sniper_Rifle.BP_Sniper_Rifle;
+RecentlyPlaced=/Game/Weapon_System/Blueprints/BP_Rifle.BP_Rifle;
+RecentlyPlaced=/Game/Weapon_System/Blueprints/BP_Pump_Shotgun.BP_Pump_Shotgun;
 RecentlyPlaced=/Game/Weapon_System/Blueprints/BP_Pistol.BP_Pistol;
 RecentlyPlaced=/Game/Weapon_System/Blueprints/BP_BaseWeapon.BP_BaseWeapon;
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
